fxied spacing bug

--- a/src/styles/variables/_sizing-spacing.scss
+++ b/src/styles/variables/_sizing-spacing.scss
@@ -15,7 +15,7 @@
     Gaps, Padding, & Margins
     ------------------------------------------ */
     /* these work on a scale of 4px increments, please keep to this mind set if adding more sizes */
-    --inc: 3px;
+    --inc: 4px;
     --spacing-1: calc(var(--inc) * 1);
     --spacing-2: calc(var(--inc) * 2);
     --spacing-3: calc(var(--inc) * 3);
